--- a/aral/Cargo.toml
+++ b/aral/Cargo.toml
@@ -8,7 +8,8 @@ repository = { workspace = true }
 license = { workspace = true }
 
 [features]
-runtime-tokio = ["tokio"]
+runtime-tokio-current-thread = ["tokio"]
+runtime-tokio-multi-thread = ["tokio"]
 runtime-async-std = ["async-std"]
 
 [dependencies]
