--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Cargo test
         uses: actions-rs/cargo@v1
-        if: matrix.features != ""
+        if: matrix.features != ''
         with:
           command: test
           args: --workspace  --release ${{ matrix.features }} -- --nocapture
