--- a/aral/Cargo.toml
+++ b/aral/Cargo.toml
@@ -9,10 +9,10 @@ license = { workspace = true }
 
 [features]
 runtime-tokio-current-thread = ["tokio"]
-runtime-tokio-multi-thread = ["tokio"]
+runtime-tokio-multi-thread = ["tokio", "tokio/rt-multi-thread"]
 runtime-async-std = ["async-std"]
 
 [dependencies]
 async-std = { version = "1.12.0", optional = true }
 cfg-if = "1.0.0"
-tokio = { version = "1.28.1", features = ["full"], optional = true }
+tokio = { version = "1.28.1", features = ["fs", "io-util", "net", "time", "rt"], optional = true }
