--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -12,6 +12,27 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-[toolchain]
-channel = "nightly"
-components = ["clippy", "rustfmt", "rust-analyzer"]
+header:
+  license:
+    spdx-id: Apache-2.0
+    copyright-owner: ARAL Development Team
+    software-name: ARAL
+
+  paths-ignore:
+    - '**/*.lock'
+    - '**/*.md'
+    - '**/.gitignore'
+    - '**/.gitmodules'
+    - '.cargo'
+    - '.clang-format'
+    - '.idea'
+    - '.vscode'
+    - 'LICENSE'
+    - 'NOTICE'
+    - 'vendor'
+
+  comment: on-failure
+
+dependency:
+  files:
+    - Cargo.toml
