--- a/aral/Cargo.toml
+++ b/aral/Cargo.toml
@@ -30,3 +30,6 @@ runtime-async-std = ["async-std"]
 async-std = { version = "1.12.0", optional = true }
 cfg-if = "1.0.0"
 tokio = { version = "1.28.1", features = ["fs", "io-util", "net", "time", "rt"], optional = true }
+
+[package.metadata.docs.rs]
+rustdoc-args = ["--cfg", "docs_rs"]
