--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -13,5 +13,5 @@
 # limitations under the License.
 
 [toolchain]
-channel = "nightly-2023-05-19"
+channel = "nightly"
 components = ["clippy", "rustfmt", "rust-analyzer"]
