--- a/aral/Cargo.toml
+++ b/aral/Cargo.toml
@@ -9,6 +9,8 @@ repository = { workspace = true }
 readme = "../README.md"
 
 [features]
+default = ["runtime-noop"]
+runtime-noop = ["aral-runtime-noop"]
 runtime-tokio = ["aral-runtime-tokio"]
 runtime-async-std = ["aral-runtime-async-std"]
 
@@ -16,6 +18,7 @@ runtime-async-std = ["aral-runtime-async-std"]
 cfg-if = "1.0.0"
 aral-runtime-tokio = { workspace = true, optional = true }
 aral-runtime-async-std = { workspace = true, optional = true }
+aral-runtime-noop = { workspace = true, optional = true }
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docs_rs"]
