--- a/aral-runtimes/async-std/Cargo.toml
+++ b/aral-runtimes/async-std/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "aral-runtime-async-std"
+description = "Aral Runtime for async-std."
 version = "0.1.0-alpha.3"
 authors = { workspace = true }
 edition = { workspace = true }
