--- a/aral-runtimes/async-std/Cargo.toml
+++ b/aral-runtimes/async-std/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "aral-runtime-async-std"
-version = "0.1.0-alpha.3"
+description = "Aral Runtime for async-std."
+version = "0.1.0-alpha.4"
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
