--- a/aral-runtimes/async-std/Cargo.toml
+++ b/aral-runtimes/async-std/Cargo.toml
@@ -11,6 +11,7 @@ repository = { workspace = true }
 
 [dependencies]
 async-std = "1.12.0"
+futures-lite = "2.1.0"
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docs_rs"]
