Update MSRV to 1.75

--- a/aral/Cargo.toml
+++ b/aral/Cargo.toml
@@ -7,6 +7,7 @@ edition = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
 readme = "../README.md"
+rust-version = { workspace = true }
 
 [features]
 default = ["runtime-noop"]
