--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ authors = ["ARAL Development Team", "jmjoy <jmjoy@apache.org>"]
 edition = "2021"
 license = "Apache-2.0 OR MIT OR MulanPSL-2.0"
 repository = "https://github.com/aral-rs/aral.git"
+rust-version = "1.75"
 
 [workspace.dependencies]
 aral-runtime-tokio = { version = "0.1.0-alpha.5", path = "./aral-runtimes/tokio" }
