--- a/aral-runtimes/noop/Cargo.toml
+++ b/aral-runtimes/noop/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "aral-runtime-noop"
 description = "Aral Runtime for noop."
-version = "0.1.0-alpha.5"
+version = "0.1.0"
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
